@@ -1,3 +1,7 @@
+20011019
+ - (bal) Fixed up init.d symlink issue and piddir stuff.  Patches by
+   Zoran Milojevic <Zoran.Milojevic@SS8.com> and j.petersen@msh.de 
+
 20011012
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/10/10 22:18:47
